--- a/projeto-site/public/style.css
+++ b/projeto-site/public/style.css
@@ -219,6 +219,7 @@ p {
 .h1_cadastro{
     margin-bottom: 20px;
 }
+
 .cadastro{
     color: #ffffff;
     border-radius: 10px;
@@ -228,10 +229,6 @@ p {
     width: 290px;
     margin-left: 43%;
     margin-top: 10%;
-}
-button{
-    float: right;
-    cursor: pointer;
 }
 
 #cadastrado, #mostrar {
@@ -334,11 +331,65 @@ button{
     height: 25px;
 }
 
-.btn_dash {
-    height: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    position: absolute;
-    margin-top: -5%;
-}
 /* Dashboard - Fim */
+
+/* Apostas - Inicio */
+.h1_apostas{
+    color: #ffffff;
+    margin-left: 25%;
+    padding-top: 5%;
+}
+
+.h1_apostas2{
+    color: #ffffff;
+    margin-left: 10%;
+    padding-top: 3%;
+}
+
+.box_apostas{
+    max-width: 1000px;
+    padding-top: 3%;
+}
+.inp_apostas{
+    margin-left: 5%;
+    height: 25px;
+}
+
+.btn_apostas {
+    height: 30px;
+    margin-left: 5%;
+    cursor: pointer;
+}
+
+.btn_apostar2 {
+    height: 25px;
+    width: 200px;
+    margin-top: 50px;
+    cursor: pointer;
+}
+
+.box_partidas {
+    max-width: 1000px;
+    margin-left: 10%;
+    padding-top: 5%;
+}
+
+.partidas {
+    border-radius: 10px;
+    box-shadow: 0px 5px 20px #000000;
+    padding: 5px 5px 5px 5px;
+}
+
+.img_apostas {
+    height: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+    
+}
+
+#resultado {
+    max-width: 500px;
+    margin-left: 10%;
+    font-size: 25px;
+}
+/* Apostas - Fim */
